--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/bug-loger
 JWT_SECRET=mysecrettoken
-ALLOWED_ORIGINS = http://localhost:3000,http://localhost:3001,https://yourdomain.com
+ALLOWED_ORIGINS = http://localhost:3000,http://localhost:3001,https://bug-tracker-due7.onrender.com
